# ImgProcUI_v1.0

./: CMakeLists.txt  README.md  run.bat
DigitalRecognize/: CMakeLists.txt
DigitalRecognize/include/: DigitalRecognize.h
DigitalRecognize/src/: DigitalRecognize.cpp  stdafx.cpp
IPUI/: CMakeLists.txt
IPUI/form/: ipui.qrc  ipui.ui
IPUI/include/: ipui.h
IPUI/src/: ipui.cpp  main.cpp
