cmake_minimum_required(VERSION 3.0.0)

project(ImgProcUI)

SET(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/Bin")

if ( MSVC )
MESSAGE("<<<CMAKE_CONFIGURATION_TYPES: ${CMAKE_CONFIGURATION_TYPES}>>>")
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/Bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/Bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_SOURCE_DIR}/Bin)
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
endif ( MSVC )

add_subdirectory(IPUI)
add_subdirectory(DigitalRecognize)